--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -27,10 +27,11 @@
             </div>
 
             <nav>
-              <a href="{{ site.baseurl }}/">Home</a>
-              <a href="{{ site.baseurl }}/getting-started">Getting Started</a>
-              <a href="{{ site.baseurl }}/search">Search</a>
-              <a href="{{ site.baseurl }}/about">About</a>
+              <a href="{{ site.baseurl }}/resume">Resume</a>
+              <a href="{{ site.baseurl }}/research">Research</a>
+<!--              <a href="{{ site.baseurl }}/">Home</a>-->
+              <a href="{{ site.baseurl }}/blog">Blog</a>
+<!--              <a href="{{ site.baseurl }}/search">Search</a>-->
             </nav>
           </header>
         </div>
